--- a/Frontend/src/app/view/business-account/ba-manage/ba-manage-category/ba-manage-category.component.html
+++ b/Frontend/src/app/view/business-account/ba-manage/ba-manage-category/ba-manage-category.component.html
@@ -68,7 +68,7 @@
             type="text"
             placeholder="Title"
             required
-            [(ngModel)]="category.name" #categoryTitle="ngModel" name="categoryTitle"
+            [(ngModel)]="itemCategory.name" #categoryTitle="ngModel" name="categoryTitle"
           />
           <div *ngIf="(categoryTitle.touched || baManageFormCategory.submitted) && categoryTitle.errors?.required"
                class="validErr">
@@ -99,7 +99,7 @@
             name="businessProfileCategories"
             #businessProfileCategories="ngModel" required
             (change)="getItems('n')"
-            [(ngModel)]="category.businessProfileCategory.businessCategory">
+            [(ngModel)]="itemCategory.businessProfileCategory.businessCategory">
           </ng-select>
           <div
             *ngIf="(businessProfileCategories.touched || baManageFormCategory.submitted) && businessProfileCategories.errors?.required"
@@ -151,11 +151,11 @@
                   [searchWhileComposing]="true"
                   name="items"
                   #items="ngModel" required
-                  [(ngModel)]="category.items"
+                  [(ngModel)]="itemCategory.items"
                   style="width: 100%">
                 </ng-select>
               </div>
-              <div *ngIf="(baManageFormCategory.submitted) && category.items.length===0"
+              <div *ngIf="(baManageFormCategory.submitted) && itemCategory.items.length===0"
                    class="validErr">
                 Item is required
               </div>
@@ -189,7 +189,7 @@
              aria-label="Small description about your category."><i class="fi-help"></i>
           </a>
           <textarea class="form-control" id="validationTooltip05" rows="5" placeholder="Description"
-                    [(ngModel)]="category.description" name="categoryDescription"></textarea>
+                    [(ngModel)]="itemCategory.description" name="categoryDescription"></textarea>
           <div class="invalid-tooltip">
             Please fill item discount
           </div>
@@ -203,6 +203,8 @@
             class="form-check-input"
             type="checkbox"
             id="invalidCheck"
+            [(ngModel)]="itemCategory.isNewCategory"
+            name="newCategory"
             required
           />
           <label class="form-check-label" for="invalidCheck"
@@ -213,7 +215,7 @@
           </div>
         </div>
       </div>
-      <button class="btn btn-primary btn-md" type="submit">
+      <button class="btn btn-primary btn-md" type="submit" [disabled]="!itemCategory.isNewCategory">
         Save
       </button>
     </form>
@@ -259,10 +261,10 @@
   <div class="accordion" id="category-list">
 
     <!-- Accordion item -->
-    <div class="accordion-item" *ngFor="let categoryE of categories;let i = index">
+    <div class="accordion-item" *ngFor="let itemCategoryE of categories;let i = index">
       <div class="accordion-header d-flex" id="headingOne">
         <div class="p-2 flex-grow-1 bd-highlight">
-          <a class="nav-link">{{categoryE.name}}</a>
+          <a class="nav-link">{{itemCategoryE.name}}</a>
         </div>
         <div class="p-2 bd-highlight">
           <a type="button" class="nav-link hover-text-danger">
@@ -272,20 +274,20 @@
         <div class="p-2 bd-highlight">
           <a type="button" class="nav-link hover-text-info" data-bs-toggle="collapse"
              [attr.data-bs-target]="'#categoryEdit' + i" aria-expanded="true" aria-controls="categoryOneEdit"
-             value="{{categoryE.itemCategoryId}}">
+             value="{{itemCategoryE.itemCategoryId}}">
             <i class="fi-edit"></i>
           </a>
         </div>
         <div class="p-2 bd-highlight">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                   [attr.data-bs-target]="'#category' + i"
-                  aria-expanded="true" aria-controls="categoryOne" value="{{categoryE.itemCategoryId}}"></button>
+                  aria-expanded="true" aria-controls="categoryOne" value="{{itemCategoryE.itemCategoryId}}"></button>
         </div>
       </div>
       <div class="accordion-collapse collapse" aria-labelledby="headingEdit" data-bs-parent="#category-list"
            id="categoryEdit{{i}}">
         <div class="card card-body border-none">
-          <form #baManageFormCategoryE="ngForm" (ngSubmit)="baManageFormCategoryE.form.valid && onSubmitE(categoryE)" novalidate>
+          <form #baManageFormCategoryE="ngForm" (ngSubmit)="baManageFormCategoryE.form.valid && onSubmitE(itemCategoryE)" novalidate>
 
             <div class="row">
               <div class="col-md-8 mb-3">
@@ -301,7 +303,7 @@
                   type="text"
                   placeholder="Title"
                   required
-                  [(ngModel)]="categoryE.name" #categoryTitleE="ngModel" name="categoryTitle"
+                  [(ngModel)]="itemCategoryE.name" #categoryTitleE="ngModel" name="categoryTitle"
                 />
                 <div
                   *ngIf="(categoryTitleE.touched || baManageFormCategoryE.submitted) && categoryTitleE.errors?.required"
@@ -332,8 +334,8 @@
                   [searchWhileComposing]="true"
                   name="businessProfileCategories"
                   #businessProfileCategoriesE="ngModel" required
-                  (change)="getItems('e',categoryE)"
-                  [(ngModel)]="categoryE.businessProfileCategory.businessCategory">
+                  (change)="getItems('e',itemCategoryE)"
+                  [(ngModel)]="itemCategoryE.businessProfileCategory.businessCategory">
                 </ng-select>
                 <div
                   *ngIf="(businessProfileCategoriesE.touched || baManageFormCategoryE.submitted) && businessProfileCategoriesE.errors?.required"
@@ -385,11 +387,11 @@
                         [searchWhileComposing]="true"
                         name="items"
                         #itemsE="ngModel" required
-                        [(ngModel)]="categoryE.items"
+                        [(ngModel)]="itemCategoryE.items"
                         style="width: 100%">
                       </ng-select>
                     </div>
-                    <div *ngIf="(baManageFormCategoryE.submitted) && categoryE.items.length===0"
+                    <div *ngIf="(baManageFormCategoryE.submitted) && itemCategoryE.items.length===0"
                          class="validErr">
                       Item is required
                     </div>
@@ -423,7 +425,7 @@
                    aria-label="Small description about your category."><i class="fi-help"></i>
                 </a>
                 <textarea class="form-control" id="validationTooltip05" rows="5" placeholder="Description"
-                          [(ngModel)]="categoryE.description" name="categoryDescription"></textarea>
+                          [(ngModel)]="itemCategoryE.description" name="categoryDescription"></textarea>
                 <div class="invalid-tooltip">
                   Please fill item discount
                 </div>
@@ -439,7 +441,7 @@
                   id="invalidCheck"
                   required
                   name="isUpdateCategory"
-                  [(ngModel)]="categoryE.isUpdateCategory"
+                  [(ngModel)]="itemCategoryE.isUpdateCategory"
                 />
                 <label class="form-check-label" for="invalidCheck"
                 >I confirm that the information provided information is accurate and correct.</label
@@ -449,7 +451,7 @@
                 </div>
               </div>
             </div>
-            <button class="btn btn-primary btn-md" type="submit" [disabled]="!categoryE.isUpdateCategory">
+            <button class="btn btn-primary btn-md" type="submit" [disabled]="!itemCategoryE.isUpdateCategory">
               Save
             </button>
           </form>
@@ -460,11 +462,11 @@
         <div class="accordion-body">
           <div class="row g-4 py-1">
             <!-- Item-->
-            <div class="col-sm-6 col-xl-4" *ngFor="let item of categoryE.items">
+            <div class="col-sm-6 col-xl-4" *ngFor="let item of itemCategoryE.items">
               <div class="card shadow-sm card-hover border-0 h-100">
                 <div class="tns-carousel-wrapper card-img-top card-img-hover"><a class="img-overlay"></a>
                   <div class="position-absolute start-0 top-0 pt-3 ps-3"><span
-                    class="d-table badge bg-info">{{categoryE.name}}</span>
+                    class="d-table badge bg-info">{{itemCategoryE.name}}</span>
                   </div>
                   <div class="content-overlay end-0 top-0 pt-3 pe-3">
                     <button class="btn btn-icon btn-light btn-xs text-primary rounded-circle" type="button"
