--- a/Frontend/src/app/view/business-account/ba-manage/ba-manage-package/ba-manage-package.component.html
+++ b/Frontend/src/app/view/business-account/ba-manage/ba-manage-package/ba-manage-package.component.html
@@ -377,7 +377,7 @@
   <div class="accordion" id="package-list">
 
     <!-- Accordion item -->
-    <div class="accordion-item mb-2" *ngFor="let itemPackageE of itemPackages;let i = index" style="margin-bottom: 20px">
+    <div class="accordion-item mb-2" *ngFor="let itemPackageE of itemPackages;let i = index" [ngStyle]="{'margin-top':i>0 ? '30px':'0px'}">
       <div class="accordion-header" id="">
         <div class="card bg-position-center border-0 overflow-hidden"
              style="height: 350px; background-size: cover;">
@@ -400,7 +400,7 @@
                   </div>
                 </a>
                 <div class="btn-group ms-n2 ms-sm-5 mt-3 justify-content-end">
-                  <a class="btn btn-primary px-3">LKR 200,410</a>
+                  <a class="btn btn-primary px-3">LKR {{itemPackageE.price}}</a>
                   <button
                     class="btnView btn btn-primary btn-icon border-end-0 border-top-0 border-bottom-0 border-light fs-sm"
                     type="button" data-bs-toggle="collapse" [attr.data-bs-target]="'#package' + i" aria-expanded="true"
@@ -422,7 +422,8 @@
 
             <div class="content-overlay end-0 top-0 pt-3 pe-3">
               <button class="btn btn-icon btn-light btn-xs text-primary rounded-circle" type="button"
-                      data-bs-toggle="tooltip" data-bs-placement="left" title="remove item"><i class="fi-trash"></i>
+                      data-bs-toggle="tooltip" data-bs-placement="left" title="remove item">
+                <i class="fi-trash" style="font-size: 20px"></i>
               </button>
             </div>
             <div style="height: 350px; background-size: cover;">
@@ -740,62 +741,9 @@
       <div class="accordionView accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#package-list"
            id="package{{i}}">
         <div class="accordion-body">
-          <div class="row g-4 py-1">
-            <!-- Item-->
-            <div class="col-sm-6 col-xl-4" *ngFor="let itemItemPackage of itemPackageE.itemItemPackages">
-              <div class="card shadow-sm card-hover border-0 h-100">
-                <div class="tns-carousel-wrapper card-img-top card-img-hover"><a class="img-overlay"></a>
-                  <div class="position-absolute start-0 top-0 pt-3 ps-3"><span
-                    class="d-table badge bg-info">{{itemPackageE.name}}</span>
-                  </div>
-                  <div class="content-overlay end-0 top-0 pt-3 pe-3">
-                    <button class="btn btn-icon btn-light btn-xs text-primary rounded-circle" type="button"
-                            data-bs-toggle="tooltip" data-bs-placement="left" title="remove item"><i
-                      class="fi-trash"></i></button>
-                  </div>
-                  <!--<div class="tns-carousel-inner"><img src="../../../../assets/img/catalog/06.jpg" alt="Image"><img-->
-                  <!--src="../../../../assets/img/catalog/06.jpg" alt="Image"></div>-->
-                  <img *ngIf="itemItemPackage.item.itemImgs!==undefined" style="height: 180px;width: 280px" [src]="getImageSrc(itemItemPackage.item.itemImgs[0])" alt="Image">
-                </div>
-                <div class="card-body position-relative pb-3">
 
-                  <!-- <h4 class="mb-1 fs-xs fw-normal text-uppercase text-primary fw-bold">Not Available</h4> -->
-                  <h3 class="h6 mb-2 fs-base"><a class="nav-link stretched-link" href="#" data-bs-toggle="offcanvas"
-                                                 data-bs-target="#item-viewer">{{itemItemPackage.item.itemTitle}}</a></h3>
-                  <!-- <div class="d-flex align-items-center text-nowrap">
-                    <p class="mb-2 fs-sm text-muted">Quantity </p>
-                    <p class="mb-2 fs-sm text-primary fw-bold mx-2"> 250g</p>
-                  </div> -->
-                  <div class="row cols-sm-2 row-cols-md-12">
-                    <div class="col">
-                      <p class="mb-2 fs-sm text-muted">Quantity </p>
-                      <p class="mb-2 fs-sm text-warning fw-bold mx-2">{{itemItemPackage.item.itemQty}}</p>
-                    </div>
-                    <div class="col">
-                      <p class="mb-2 fs-sm text-muted">Discount </p>
-                      <p class="mb-2 fs-sm text-primary fw-bold">20%</p>
-                    </div>
-                  </div>
-                  <div class="fw-bold"><i class="fi-cash mt-n1 me-2 lead align-middle opacity-70"></i>LKR
-                    {{itemItemPackage.item.itemPrice}}
-                  </div>
-                </div>
-                <div class="card-footer d-flex align-items-center justify-content-center mx-3 pt-3 text-nowrap">
-                  <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" [checked]="itemItemPackage.item.itemAvailable"
-                           (click)="setItemAvailable(itemItemPackage.item)">
-                    <label *ngIf="!itemItemPackage.item.itemAvailable"
-                           class="form-check-label fs-xs fw-normal text-uppercase text-primary fw-bold">
-                      Not Available</label>
-                    <label *ngIf="itemItemPackage.item.itemAvailable"
-                           class="form-check-label fs-xs fw-normal text-uppercase text-green fw-bold">
-                      Available</label>
-                  </div>
-                </div>
-              </div>
-            </div>
+          <app-ba-manage-item-view [items]="itemPackageE.items"></app-ba-manage-item-view>
 
-          </div>
         </div>
       </div>
     </div>
