--- a/Frontend/src/app/view/business-account/ba-manage/ba-manage-category/ba-manage-category.component.html
+++ b/Frontend/src/app/view/business-account/ba-manage/ba-manage-category/ba-manage-category.component.html
@@ -460,62 +460,9 @@
       <div class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#category-list"
            id="category{{i}}">
         <div class="accordion-body">
-          <div class="row g-4 py-1">
-            <!-- Item-->
-            <div class="col-sm-6 col-xl-4" *ngFor="let item of itemCategoryE.items">
-              <div class="card shadow-sm card-hover border-0 h-100">
-                <div class="tns-carousel-wrapper card-img-top card-img-hover"><a class="img-overlay"></a>
-                  <div class="position-absolute start-0 top-0 pt-3 ps-3"><span
-                    class="d-table badge bg-info">{{itemCategoryE.name}}</span>
-                  </div>
-                  <div class="content-overlay end-0 top-0 pt-3 pe-3">
-                    <button class="btn btn-icon btn-light btn-xs text-primary rounded-circle" type="button"
-                            data-bs-toggle="tooltip" data-bs-placement="left" title="remove item"><i
-                      class="fi-trash"></i></button>
-                  </div>
-                  <!--<div class="tns-carousel-inner"><img src="../../../../assets/img/catalog/06.jpg" alt="Image"><img-->
-                  <!--src="../../../../assets/img/catalog/06.jpg" alt="Image"></div>-->
-                  <img *ngIf="item.itemImgs!==undefined" style="height: 180px;width: 280px" [src]="getImageSrc(item.itemImgs[0])" alt="Image">
-                </div>
-                <div class="card-body position-relative pb-3">
 
-                  <!-- <h4 class="mb-1 fs-xs fw-normal text-uppercase text-primary fw-bold">Not Available</h4> -->
-                  <h3 class="h6 mb-2 fs-base"><a class="nav-link stretched-link" href="#" data-bs-toggle="offcanvas"
-                                                 data-bs-target="#item-viewer">{{item.itemTitle}}</a></h3>
-                  <!-- <div class="d-flex align-items-center text-nowrap">
-                    <p class="mb-2 fs-sm text-muted">Quantity </p>
-                    <p class="mb-2 fs-sm text-primary fw-bold mx-2"> 250g</p>
-                  </div> -->
-                  <div class="row cols-sm-2 row-cols-md-12">
-                    <div class="col">
-                      <p class="mb-2 fs-sm text-muted">Quantity </p>
-                      <p class="mb-2 fs-sm text-warning fw-bold mx-2">{{item.itemQty}}</p>
-                    </div>
-                    <div class="col">
-                      <p class="mb-2 fs-sm text-muted">Discount </p>
-                      <p class="mb-2 fs-sm text-primary fw-bold">20%</p>
-                    </div>
-                  </div>
-                  <div class="fw-bold"><i class="fi-cash mt-n1 me-2 lead align-middle opacity-70"></i>LKR
-                    {{item.itemPrice}}
-                  </div>
-                </div>
-                <div class="card-footer d-flex align-items-center justify-content-center mx-3 pt-3 text-nowrap">
-                  <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" [checked]="item.itemAvailable"
-                           (click)="setItemAvailable(item)">
-                    <label *ngIf="!item.itemAvailable"
-                           class="form-check-label fs-xs fw-normal text-uppercase text-primary fw-bold">
-                      Not Available</label>
-                    <label *ngIf="item.itemAvailable"
-                           class="form-check-label fs-xs fw-normal text-uppercase text-green fw-bold">
-                      Available</label>
-                  </div>
-                </div>
-              </div>
-            </div>
+          <app-ba-manage-item-view [items]="itemCategoryE.items"></app-ba-manage-item-view>
 
-          </div>
         </div>
       </div>
     </div>
