--- a/Frontend/src/app/view/business-account/ba-manage/ba-manage-item-edit/ba-manage-item-edit.component.html
+++ b/Frontend/src/app/view/business-account/ba-manage/ba-manage-item-edit/ba-manage-item-edit.component.html
@@ -63,7 +63,7 @@
           <p class="mb-2 fs-sm text-dark fw-bold">Features </p>
           <div class="col" *ngFor="let itemFeature of item.itemItemFeatures">
             <span class="bg-success text-light fs-sm btn btn-xs disabled opacity-100 rounded-pill me-2 mb-2 ms-1 mt-1">
-              {{itemFeature.name}}
+              {{itemFeature.itemFeature.name}}
               <!--<i class="fi-x fs-xs ms-2"></i>-->
             </span>
           </div>
