--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -15,4 +15,17 @@
   font-family: "Noto Sans", sans-serif;
   cursor: pointer;
 }
+carousel-item-next{
+  transition: transform 0s ease-in-out;
+}
+
+.carousel-item-prev{
+    transition: transform 0s ease-in-out;
+}
+.carousel-item-left {
+    transform: translateX(-100%);
+}
+.carousel-item-right {
+    transform: translateX(100%);
+}
 
